Fixed view on Mobile

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ p {
 }
 .about-me-description{
 	margin: 0 auto;
-	width: 550px;
+	max-width: 550px;
 }
 
 nav {
